# qmlail

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/qml/: CustomTextBox.qml  DetailBar.qml  DetailBarEntry.qml  DetailBarEntryExpanded.qml  LeftBar.qml  LeftBarMenuEntry.qml  MailBar.qml  MailBarEntry.qml  WrappedText.qml  main.qml
client/qml/dummydata/: mailBarEntryModel.qml  mailConversationModel.qml
client/src/: main.cpp
qmlailib/: CMakeLists.txt  account.cpp  account.h  accountmanager.cpp  accountmanager.h  accout.cpp  accout.h  contact.cpp  contact.h  imailfetcher.cpp  imailfetcher.h  mailconversation.cpp  mailconversation.h  message.cpp  message.h
qmlailib/dummyFetcher/: CMakeLists.txt  dummyfetcher.cpp  dummyfetcher.h
qmlailib/vmime/vmime_cmake/: CMakeLists.txt
qmlailib/vmime/vmime_cmake/vmime/: config.hpp
qmlailib/vmime/vmime_cmake/vmime/src/utility/: inputStreamAdapter.cpp
qmlailib/vmime/vmime_cmake/vmime/vmime/utility/: inputStreamStringAdapter.hpp
